gateway/cloud-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloud-routes
  namespace: cloud
spec:
  parentRefs:
  - name: lara-gateway
  hostnames:
  - "cloud.lara.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pipelines
    backendRefs:
    - name: woodpecker
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /auth/
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: "/"
    backendRefs:
    - name: keycloak
      port: 80
